--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://eidriian.github.io/weatherapp",
+  "homepage": "https://eidriian.github.io/weather-app",
   "name": "react17x",
   "version": "0.1.0",
   "private": true,
